--- a/Flyiing Hiigh/Resources/layout/ScoreScreen.axml
+++ b/Flyiing Hiigh/Resources/layout/ScoreScreen.axml
@@ -4,8 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:theme="@android:style/Theme.NoTitleBar">
-    <skiasharp.views.android.SKCanvasView
+    <ListView
+        android:minWidth="25px"
+        android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/canvasViewScoreScreen" />
+        android:id="@+id/listViewScore" />
 </LinearLayout>
