--- a/Flyiing Hiigh/Resources/layout/ScoreScreen.axml
+++ b/Flyiing Hiigh/Resources/layout/ScoreScreen.axml
@@ -3,11 +3,20 @@
     android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background50"
     android:theme="@android:style/Theme.NoTitleBar">
     <ListView
         android:minWidth="25px"
         android:minHeight="25px"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/transparent"
+        android:cacheColorHint="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:divider="@null"
+        android:clickable="false"
+        android:smoothScrollbar="true"
+        android:alwaysDrawnWithCache="true"
+        android:scrollingCache="true"
         android:id="@+id/listViewScore" />
 </LinearLayout>
