Ranking-Button hinzugefügt

--- a/Flyiing Hiigh/Resources/layout/ScoreScreen.axml
+++ b/Flyiing Hiigh/Resources/layout/ScoreScreen.axml
@@ -8,6 +8,7 @@
     <ListView
         android:minWidth="25px"
         android:minHeight="25px"
+        android:layout_margin="25dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@android:color/transparent"
